modules/cli/src/test/resources/bad/disamb/imports/Import18.scr
module good.disamb.imports.Import18;


import bad.disamb.imports.pack1.Import18b as Bar;


global protocol Foo(role A, role B)
{
	do good.disamb.imports.pack1.Import18b.Proto2(A, B);
}


